[package]
edition = "2021"
name = "my-game"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1" # make sure this is the latest version
bevy_tweening = "0.3.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3